# subscriptions-rs

./: Cargo.toml  container.sh  postgres.yml
scripts/postgres/: schema.sql
src/: main.rs  test.rs
