[package]
name = "subscriptions-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
postgres = { version = "0.17.3", features = ["with-chrono-0_4","with-serde_json-1"]}
structopt = "0.3.21"
exitfailure = "0.5.1"
reqwest = { version = "0.11.0", features = ["json","blocking"] }
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
dotenv = "0.15.0"